--- a/env.example
+++ b/env.example
@@ -109,6 +109,7 @@ EMBEDDING_BINDING_HOST=http://localhost:11434
 # LIGHTRAG_VECTOR_STORAGE=PGVectorStorage
 # LIGHTRAG_DOC_STATUS_STORAGE=PGDocStatusStorage
 # LIGHTRAG_GRAPH_STORAGE=Neo4JStorage
+# LIGHTRAG_GRAPH_STORAGE=RedisGraphStorage
 
 ### TiDB Configuration (Deprecated)
 # TIDB_HOST=localhost
