--- a/env.example
+++ b/env.example
@@ -110,6 +110,7 @@ EMBEDDING_BINDING_HOST=http://localhost:11434
 # LIGHTRAG_DOC_STATUS_STORAGE=PGDocStatusStorage
 # LIGHTRAG_GRAPH_STORAGE=Neo4JStorage
 # LIGHTRAG_GRAPH_STORAGE=RedisGraphStorage
+# LIGHTRAG_GRAPH_STORAGE=LsmGraphStorage
 
 ### TiDB Configuration (Deprecated)
 # TIDB_HOST=localhost
